Bug #42592 "Falcon assertion (insert(NULL, record, record->recordNumber)) when backlogging"

There are two contributing factors to this failure:

1) Handle a failed backlog more gracefully

If Table::insertIntoTree(NULL) fails during a backlog,
just removed the backlogged record instead of assert.

insertIntoTree() should never fail for pending records
in a transaction except possibly system transactions,
which can span multiple threads.
 
2) Don't chill or backlog system transactions